# coursebot

./: .gitignore  README.md  install.sh  pyproject.toml
src/: __init__.py  config.py  main.py
src/bot/: handlers.py  keyboards.py
src/data_manager/: database.py
src/web_app/: main.py  static_files.py
src/web_app/routers/: __init__.py  courses.py  menu_items.py  promotions.py  topics.py
src/web_app/static/js/: promotions.js
src/web_app/templates/: 404.html  500.html  add_edit_course.html  add_edit_promotion.html  add_edit_topic.html  base.html  courses.html  edit_menu_item.html  index.html  menu_items.html  promotions.html
